tests/paczka2/big_fuzzy/38343025.err
Error in line 18: GZoeDGWcCYY A181 40,3
Error in line 28: GZoeDGWcCYY A181 71,7
Error in line 30: UjïxkN6 S403 53,9
Error in line 29: GZoeDGWcCYY S403 23,8
Error in line 42: A954 S596 11,2
Error in line 43: UjLxkN6 A181 46,4
Error in line 34: GZoeDGWcCYY A181 57,4
Error in line 57: OuH9YekX2YH A954 69,3
Error in line 70: OuH9YekX2YH S403 64,4
Error in line 72: iKb00PivoTU S596 13,9
Error in line 92: D6BH S596 15,3
Error in line 98: UjLxkN6 A181 48,0
Error in line 109: iKb00PivoTU S403 35,4
Error in line 114: A954 S596 51,9
Error in line 121: xkkwVj S403 39,8
Error in line 143: GZoeDGWcCYY S596 77,09
Error in line 137: GZoeDGWcCYY S403 76,2
Error in line 150: GZoeDGWcCYY S596 27,3
Error in line 146: UjLxkN6 S403 82,7
Error in line 148: iKb00PivoTU A181 99,4
Error in line 156: iKb00PivoTU A954 71,1
Error in line 133: OuH9YekX2YH S596 214,8
Error in line 160: GZoeDGWcCYY S403 59,5
Error in line 174: A954 S596 91,1
Error in line 175: A954 A181 98,8
Error in line 183: UjLxkN6 S40{ 2,8
Error in line 166: xkkwVj S403 82,0
Error in line 185: GZoeDGWcCYY A954 93,5
Error in line 199: xkkwVj S403 13,a
Error in line 184: xkkwVj A181 92,7
Error in line 194: A954 A954 28,2
Error in line 195: OuH9YekX2YH A181 22,0
Error in line 202: GZoeDGWcCYY S596 66,9
Error in line 165: D6BH S403 112,8
Error in line 189: UjLxkN6 S403 3,4
Error in line 201: xkkwVj S403 20,0
Error in line 216: UjLxkN6 S596 71,0
Error in line 218: xkkwVj A954 44,5
Error in line 228: xkkwVj A181 59,5
Error in line 229: xkkwVj S403 3,1
Error in line 231: xkkwVj A181 41,9
Error in line 237: xkkwVj S596 74,0
Error in line 233: D6BH A181 46,7
